# StepScribe

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
stepscribe/: __init__.py  component_models.py  state_machine.py  state_models.py  version.py
stepscribe/components/: __init__.py  catcher.py  choice_rules.py  item_processor.py  item_reader.py  result_writer.py  retrier.py
stepscribe/states/: __init__.py  base_state.py  choice.py  map.py  parallel.py  pass_wait.py  succeed_fail.py  task.py
tests/: HelloWorldStateMachine.asl.json  test_state_machine.py  test_task.py
